fix project layout alignment

--- a/src/index.css
+++ b/src/index.css
@@ -495,12 +495,12 @@ body::before {
   }
 
    .hero-text h1 {
-    font-size: 1.15rem;   /* 🔥 thora bara */
+    font-size: 1.34rem;   /* 🔥 thora bara */
     line-height: 1.25;
   }
 
   .hero-text p {
-    font-size: 0.78rem;   /* 🔥 balanced */
+    font-size: 0.88rem;   /* 🔥 balanced */
     line-height: 1.25;
   }
 
@@ -555,7 +555,7 @@ body::before {
   .overlay {
     padding: 0.25rem 0.5rem;   /* 🔥 chhota box */
     border-radius: 0.3rem;
-     font-size: 0.9rem;
+     font-size: 0.6rem;
     top: 2rem;
     transform: translate(-68%, 0);
   }
@@ -676,14 +676,14 @@ body::before {
   justify-content: space-between;
   gap: 2rem;
    opacity: 0;
-  transform: translateX(5rem);
+  /* transform: translateX(5rem); */
 
   transition: all 0.8s ease;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 .project-card.show {
   opacity: 1;
-  transform: translateX(0);
+  /* transform: translateX(0); */
 }
 /* LEFT IMAGE */
 .project-left {
@@ -925,12 +925,12 @@ body::before {
 
   .hero {
     padding: 3rem 1.2rem;
-
+    margin-top: 2rem;
     gap: 1rem;
   }
 
   .hero-image img {
-    width: min(14rem, 38vw);
+    width: min( 48vw);
   }
 
   .big {
@@ -956,25 +956,25 @@ body::before {
   }
   /* TEXT SECTION */
    .section {
-    width: 45%;
+    width: 56%;
 
-    padding-left: 0.8rem;   /* 🔥 left breathing space */
+    padding-left: 0.2rem;   /* 🔥 left breathing space */
     box-sizing: border-box;
   }
 
   .heading {
-    font-size: 1.2rem;
+    font-size: 1.43rem;
     line-height: 1.1;
     margin-bottom: 0.3rem;
   }
 
   .line {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     opacity: 0.7;
   }
 
   .paragraph {
-    font-size: 0.58rem;
+    font-size: 0.68rem;
     line-height: 1.35;
     margin-top: 0.2rem;
   }
@@ -987,7 +987,7 @@ body::before {
   .right-image img {
     width: 100%;          /* 🔥 actual image */
     max-width: 11rem;     /* control size */
-    height: auto;
+    height: 11rem;
   }
 }
 @media (max-width: 768px) {
@@ -1006,13 +1006,13 @@ body::before {
     gap: 0.5rem;
 
     width: 100%;
-    margin-top: 4rem;
+    margin-top: 3rem;
   }
 
   /* 🔥 IMAGE SIDE BIGGER */
   .project-left {
     flex: 1.3;
-
+   height:8rem;
     min-width: 0;
   }
 
@@ -1021,7 +1021,7 @@ body::before {
 
     max-width: 12rem;   /* 🔥 bigger image */
 
-    height: 6rem;
+    height: 8rem;
   }
 
   /* 🔥 TEXT SIDE SMALLER */
@@ -1034,7 +1034,7 @@ body::before {
   }
 
   .project-right h2 {
-    font-size: 1rem;
+    font-size: 1.5rem;
 
     line-height: 1.1;
 
@@ -1042,13 +1042,13 @@ body::before {
   }
 
   .project-right h3 {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
 
     margin-bottom: 0.2rem;
   }
 
   .project-right p {
-    font-size: 0.52rem;
+    font-size: 0.58rem;
 
     line-height: 1.25;
   }
